--- a/SimpleWeather.UWP/Main/LocationSearchPage.xaml
+++ b/SimpleWeather.UWP/Main/LocationSearchPage.xaml
@@ -23,7 +23,10 @@
             MaxWidth="1280"
             d:Header="Add a location"
             d:PlaceholderText="Enter a location"
+            Footer="{x:Bind LocationSearchViewModel.Footer, Mode=OneWay}"
             Header="{helpers:StringRes Name='label_fab_add_location'}"
+            IsLoading="{x:Bind LocationSearchViewModel.IsLoading, Mode=OneWay}"
+            IsSuggestionListOpen="{x:Bind LocationSearchViewModel.Locations, Converter={StaticResource collectionBooleanConverter}, Mode=OneWay}"
             PlaceholderText="{helpers:StringRes Name='location_search_hint'}"
             QuerySubmitted="Location_QuerySubmitted"
             Style="{ThemeResource LocationQuerySearchBoxStyle}"
