--- a/SimpleWeather.UWP/Preferences/Settings_General.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_General.xaml
@@ -2,6 +2,7 @@
     x:Class="SimpleWeather.UWP.Preferences.Settings_General"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:SimpleWeather.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Preferences"
@@ -115,6 +116,24 @@
                     Text="{helpers:StringRes Name='not_channel_name_precipnotification'}" />
                 <StackPanel Padding="10,5" Orientation="Horizontal">
                     <ToggleSwitch x:Name="PoPChanceNotifSwitch" />
+                </StackPanel>
+                <TextBlock
+                    d:Text="Chance:"
+                    Style="{StaticResource PrefTitleStyle}"
+                    Text="{helpers:StringRes Name='label_chance'}" />
+                <StackPanel Padding="10,5" Orientation="Horizontal">
+                    <ComboBox
+                        x:Name="PoPChancePct"
+                        DisplayMemberPath="Display"
+                        IsEnabled="{x:Bind PoPChanceNotifSwitch.IsOn, Mode=OneWay}"
+                        SelectedValuePath="Value">
+                        <controls:ComboBoxItem Display="&gt;= 40%" Value="40" />
+                        <controls:ComboBoxItem Display="&gt;= 50%" Value="50" />
+                        <controls:ComboBoxItem Display="&gt;= 60%" Value="60" />
+                        <controls:ComboBoxItem Display="&gt;= 70%" Value="70" />
+                        <controls:ComboBoxItem Display="&gt;= 80%" Value="80" />
+                        <controls:ComboBoxItem Display="&gt;= 90%" Value="90" />
+                    </ComboBox>
                 </StackPanel>
                 <Rectangle
                     Height="1"
