--- a/SimpleWeather.UWP/Themes/Generic.xaml
+++ b/SimpleWeather.UWP/Themes/Generic.xaml
@@ -71,6 +71,7 @@
                                 Background="{TemplateBinding Background}"
                                 IsSuggestionListOpen="{TemplateBinding IsSuggestionListOpen}"
                                 ItemTemplate="{TemplateBinding ItemTemplate}"
+                                ItemsSource="{TemplateBinding ItemsSource}"
                                 PlaceholderText="{TemplateBinding PlaceholderText}"
                                 Style="{ThemeResource DefaultAutoSuggestBoxStyle}"
                                 TextBoxStyle="{TemplateBinding TextBoxStyle}"
