--- a/SimpleWeather.UWP/Main/LocationSearchPage.xaml
+++ b/SimpleWeather.UWP/Main/LocationSearchPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<viewModels:ViewModelPage
     x:Class="SimpleWeather.UWP.Main.LocationSearchPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,7 +8,10 @@
     xmlns:local="using:SimpleWeather.UWP.Main"
     xmlns:localControls="using:SimpleWeather.UWP.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="using:SimpleWeather.UWP.ViewModels"
+    xmlns:viewmodels="using:SimpleWeather.ViewModels"
     d:Background="{ThemeResource RegionBrush}"
+    d:DataContext="{d:DesignInstance Type=viewmodels:LocationSearchViewModel}"
     mc:Ignorable="d">
 
     <Page.Transitions>
@@ -34,4 +37,4 @@
             SuggestionChosen="Location_SuggestionChosen"
             TextChanged="Location_TextChanged" />
     </Grid>
-</Page>
+</viewModels:ViewModelPage>
