--- a/SimpleWeather.UWP/Main/Shell.xaml
+++ b/SimpleWeather.UWP/Main/Shell.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<viewModels:ViewModelPage
     x:Class="SimpleWeather.UWP.Main.Shell"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -17,6 +17,7 @@
     xmlns:muxcp="using:Microsoft.UI.Xaml.Controls.Primitives"
     xmlns:primitiveContract7Present="using:Microsoft.UI.Xaml.Controls.Primitives?IsApiContractPresent(Windows.Foundation.UniversalApiContract,7)"
     xmlns:sharedHelpers="using:SimpleWeather.UWP.Shared.Helpers"
+    xmlns:viewModels="using:SimpleWeather.UWP.ViewModels"
     muxc:BackdropMaterial.ApplyToRootOrPageBackground="True"
     mc:Ignorable="d">
 
@@ -178,4 +179,4 @@
 
         </VisualStateManager.VisualStateGroups>
     </Grid>
-</Page>
+</viewModels:ViewModelPage>
