--- a/SimpleWeather.UWP/Main/WeatherDetailsPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherDetailsPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<viewModels:ViewModelPage
     x:Class="SimpleWeather.UWP.Main.WeatherDetailsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,6 +10,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:viewModels="using:SimpleWeather.UWP.ViewModels"
     d:Background="{ThemeResource RegionBrush}"
     DataContext="{x:Bind Forecasts, Mode=OneWay}"
     mc:Ignorable="d">
@@ -132,4 +133,4 @@
             IsIndeterminate="True"
             Visibility="{Binding IsLoading, Mode=OneWay, Converter={StaticResource booleanToVisibilityConverter}, FallbackValue='Collapsed'}" />
     </Grid>
-</Page>
+</viewModels:ViewModelPage>
