--- a/SimpleWeather.UWP/Controls/BeaufortControl.xaml
+++ b/SimpleWeather.UWP/Controls/BeaufortControl.xaml
@@ -2,6 +2,7 @@
     x:Class="SimpleWeather.UWP.Controls.BeaufortControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:SimpleWeather.UWP.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Controls"
@@ -26,7 +27,7 @@
             </ResourceDictionary.ThemeDictionaries>
             <helpers:ObjectContainer x:Name="IsLight" Value="{ThemeResource IsLightValue}" />
             <SolidColorBrush x:Name="BeaufortPaintColorBrush" Color="{ThemeResource BeaufortPaintColor}" />
-            <helpers:IconForegroundConverter x:Key="iconForegroundConverter" ConverterParameter="{ThemeResource BeaufortPaintColor}" />
+            <converters:IconForegroundConverter x:Key="iconForegroundConverter" ConverterParameter="{ThemeResource BeaufortPaintColor}" />
         </ResourceDictionary>
     </UserControl.Resources>
 
