--- a/SimpleWeather.UWP/Controls/DataTemplates.xaml
+++ b/SimpleWeather.UWP/Controls/DataTemplates.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
+    xmlns:databinding="using:SimpleWeather.UWP.DataBinding"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Controls"
     xmlns:localControls="using:SimpleWeather.UWP.Controls"
@@ -25,7 +26,7 @@
                 FontFamily="Segoe MDL2 Assets"
                 Foreground="{ThemeResource AppAccentColorBrush}"
                 Glyph="&#xE7B7;"
-                Visibility="{x:Bind helpers:BindingExtensions.BoolToVisibility(IsEmpty, x:True), FallbackValue=Collapsed, Mode=OneWay}" />
+                Visibility="{x:Bind databinding:BindingExtensions.BoolToVisibility(IsEmpty, x:True), FallbackValue=Collapsed, Mode=OneWay}" />
             <StackPanel
                 Grid.Column="1"
                 VerticalAlignment="Center"
