--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -2,6 +2,7 @@
     x:Class="SimpleWeather.UWP.Controls.LocationPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:SimpleWeather.UWP.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:databinding="using:SimpleWeather.UWP.DataBinding"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
@@ -33,7 +34,7 @@
                     <x:Boolean x:Key="IsLightValue">true</x:Boolean>
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
-            <helpers:IconForegroundConverter x:Key="iconForegroundConverter" ConverterParameter="{ThemeResource ForegroundColor}" />
+            <converters:IconForegroundConverter x:Key="iconForegroundConverter" ConverterParameter="{ThemeResource ForegroundColor}" />
             <helpers:ObjectContainer x:Key="IsLight" Value="{ThemeResource IsLightValue}" />
         </ResourceDictionary>
     </UserControl.Resources>
@@ -158,7 +159,7 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Center"
             Orientation="Vertical">
-            <Grid HorizontalAlignment="Right" Visibility="{x:Bind helpers:BindingExtensions.IsVisibleIfBothTrue(ViewModel.IsShowHiLo, ViewModel.IsWeatherValid), Mode=OneWay}">
+            <Grid HorizontalAlignment="Right" Visibility="{x:Bind databinding:BindingExtensions.IsVisibleIfBothTrue(ViewModel.IsShowHiLo, ViewModel.IsWeatherValid), Mode=OneWay}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition />
@@ -184,7 +185,7 @@
                     ShowAsMonochrome="True"
                     WeatherIcon="&#xf058;" />
             </Grid>
-            <Grid HorizontalAlignment="Right" Visibility="{x:Bind helpers:BindingExtensions.IsVisibleIfBothTrue(ViewModel.IsShowHiLo, ViewModel.IsWeatherValid), Mode=OneWay}">
+            <Grid HorizontalAlignment="Right" Visibility="{x:Bind databinding:BindingExtensions.IsVisibleIfBothTrue(ViewModel.IsShowHiLo, ViewModel.IsWeatherValid), Mode=OneWay}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition />
@@ -286,7 +287,7 @@
             d:Text="NO DATA"
             Style="{ThemeResource TitleTextBlockStyle}"
             Text="{helpers:StringRes Name='label_nodata'}"
-            Visibility="{x:Bind helpers:BindingExtensions.IsVisibleIfBothFalse(ViewModel.IsWeatherValid, ViewModel.IsLoading), Mode=OneWay}" />
+            Visibility="{x:Bind databinding:BindingExtensions.IsVisibleIfBothFalse(ViewModel.IsWeatherValid, ViewModel.IsLoading), Mode=OneWay}" />
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="Mobile">
