--- a/SimpleWeather.UWP/Controls/WeatherDetailPanel.xaml
+++ b/SimpleWeather.UWP/Controls/WeatherDetailPanel.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
+    xmlns:converters="using:SimpleWeather.UWP.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Controls"
@@ -30,7 +31,7 @@
             </ResourceDictionary.ThemeDictionaries>
             <helpers:ObjectContainer x:Key="IsLight" Value="{ThemeResource IsLightValue}" />
             <helpers:ObjectContainer x:Key="Foreground" Value="{ThemeResource ForegroundColor}" />
-            <helpers:IconForegroundConverter x:Key="iconForegroundConverter" ConverterParameter="{ThemeResource Foreground}" />
+            <converters:IconForegroundConverter x:Key="iconForegroundConverter" ConverterParameter="{ThemeResource Foreground}" />
         </ResourceDictionary>
     </UserControl.Resources>
 
