--- a/SimpleWeather.UWP/Main/LocationsPage.xaml
+++ b/SimpleWeather.UWP/Main/LocationsPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
+    xmlns:converters="using:SimpleWeather.UWP.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:localcontrols="using:SimpleWeather.UWP.Controls"
@@ -14,7 +15,7 @@
     mc:Ignorable="d">
 
     <Page.Resources>
-        <helpers:LocationTypeConverter x:Key="locTypeConverter" />
+        <converters:LocationTypeConverter x:Key="locTypeConverter" />
         <Style x:Key="LocationsPanelHeaderStyle" TargetType="GridViewHeaderItem">
             <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
             <Setter Property="FontSize" Value="{ThemeResource GridViewHeaderItemThemeFontSize}" />
