--- a/SimpleWeather.UWP/Main/WeatherNow.xaml
+++ b/SimpleWeather.UWP/Main/WeatherNow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
+    xmlns:converters="using:SimpleWeather.UWP.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:databinding="using:SimpleWeather.UWP.DataBinding"
     xmlns:graphs="using:SimpleWeather.UWP.Controls.Graphs"
@@ -25,9 +26,9 @@
     <Page.Resources>
         <ResourceDictionary>
             <SolidColorBrush x:Name="ForegroundColorBrush" Color="{ThemeResource TextFillColorPrimary}" />
-            <helpers:DetailsItemGridFilterConverter x:Key="detailsFilter" />
-            <helpers:GraphDataVisibilityConverter x:Key="graphDataConv" />
-            <helpers:TempToColorTempConverter x:Key="tempToColorTempConverter" FallbackColor="{ThemeResource ForegroundColor}" />
+            <converters:DetailsItemGridFilterConverter x:Key="detailsFilter" />
+            <converters:GraphDataVisibilityConverter x:Key="graphDataConv" />
+            <converters:TempToColorTempConverter x:Key="tempToColorTempConverter" FallbackColor="{ThemeResource ForegroundColor}" />
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Dark">
                     <Style
