--- a/SimpleWeather.UWP/Setup/SetupSettingsPage.xaml
+++ b/SimpleWeather.UWP/Setup/SetupSettingsPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:databinding="using:SimpleWeather.UWP.DataBinding"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Setup"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -28,7 +29,7 @@
                 RequestedTheme="Dark"
                 Text="{helpers:StringRes Name='setup_preferences_prompt'}" />
             <StackPanel
-                Width="{x:Bind helpers:BindingExtensions.Multiply(Scroller.ViewportWidth, 0.75), Mode=OneWay}"
+                Width="{x:Bind databinding:BindingExtensions.Multiply(Scroller.ViewportWidth, 0.75), Mode=OneWay}"
                 MinHeight="480"
                 Margin="0,16,0,0"
                 Padding="16"
