--- a/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Themes/Generic.xaml
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Themes/Generic.xaml
@@ -11,8 +11,10 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mtuc="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    xmlns:not_win="http://uno.ui/not_win"
     xmlns:primitives="using:Microsoft.UI.Xaml.Controls.Primitives"
-    mc:Ignorable="d">
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    mc:Ignorable="d not_win">
 
     <ResourceDictionary.ThemeDictionaries>
         <ResourceDictionary x:Key="Dark">
@@ -88,17 +90,17 @@
         </Setter>
     </Style>
 
-    <Style x:Key="BottomStepperIndicatorItemStyle" TargetType="ListViewItem">
+    <Style x:Key="BottomStepperIndicatorItemStyle" TargetType="ListBoxItem">
         <Setter Property="Margin" Value="4" />
         <Setter Property="AllowFocusOnInteraction" Value="False" />
         <Setter Property="IsHitTestVisible" Value="False" />
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="ListViewItem">
+                <ControlTemplate TargetType="ListBoxItem">
                     <Grid>
                         <Ellipse
-                            x:Name="ListViewIndicatorItem"
+                            x:Name="ListBoxIndicatorItem"
                             Width="8"
                             Height="8"
                             Fill="White"
@@ -109,21 +111,21 @@
                                 <VisualState x:Name="Unselected" />
                                 <VisualState x:Name="Selected">
                                     <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ListViewIndicatorItem" Storyboard.TargetProperty="Opacity">
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ListBoxIndicatorItem" Storyboard.TargetProperty="Opacity">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="1" />
                                         </ObjectAnimationUsingKeyFrames>
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState x:Name="SelectedUnfocused">
                                     <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ListViewIndicatorItem" Storyboard.TargetProperty="Opacity">
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ListBoxIndicatorItem" Storyboard.TargetProperty="Opacity">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="1" />
                                         </ObjectAnimationUsingKeyFrames>
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState x:Name="SelectedPointerOver">
                                     <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ListViewIndicatorItem" Storyboard.TargetProperty="Opacity">
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ListBoxIndicatorItem" Storyboard.TargetProperty="Opacity">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="1" />
                                         </ObjectAnimationUsingKeyFrames>
                                     </Storyboard>
@@ -199,30 +201,28 @@
                                     </StackPanel>
                                 </Button.Content>
                             </Button>
-                            <ListView
+                            <win:ListBox
                                 x:Name="IndicatorBox"
                                 Grid.Column="1"
-                                d:ItemContainerStyle="{ThemeResource DefaultListViewItemStyle}"
+                                d:ItemContainerStyle="{ThemeResource DefaultListBoxItemStyle}"
                                 Background="Transparent"
-                                CanDrag="False"
-                                CanDragItems="False"
-                                CanReorderItems="False"
-                                IsItemClickEnabled="False"
-                                IsMultiSelectCheckBoxEnabled="False"
-                                IsSwipeEnabled="False"
                                 ItemContainerStyle="{ThemeResource BottomStepperIndicatorItemStyle}"
-                                ReorderMode="Disabled"
-                                SelectionMode="Single"
-                                ShowsScrollingPlaceholders="False">
-                                <ListView.ItemsPanel>
+                                SelectionMode="Single">
+                                <ListBox.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <StackPanel
                                             HorizontalAlignment="Center"
                                             VerticalAlignment="Center"
                                             Orientation="Horizontal" />
                                     </ItemsPanelTemplate>
-                                </ListView.ItemsPanel>
-                            </ListView>
+                                </ListBox.ItemsPanel>
+                            </win:ListBox>
+                            <not_win:StackPanel
+                                x:Name="IndicatorBox"
+                                Grid.Column="1"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Orientation="Horizontal" />
                             <Button
                                 x:Name="NextBtn"
                                 Grid.Column="2"
