--- a/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Main/WeatherNow.xaml
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Main/WeatherNow.xaml
@@ -180,7 +180,7 @@
                                 <FontIcon
                                     Grid.Column="0"
                                     Margin="5,2,5,0"
-                                    FontFamily="Segoe MDL2 Assets"
+                                    FontFamily="{ThemeResource SymbolThemeFontFamily}"
                                     Glyph="&#xE783;" />
                                 <TextBlock
                                     Grid.Column="1"
@@ -194,7 +194,7 @@
                                     Margin="5,0"
                                     HorizontalAlignment="Right"
                                     VerticalAlignment="Center"
-                                    FontFamily="Segoe MDL2 Assets"
+                                    FontFamily="{ThemeResource SymbolThemeFontFamily}"
                                     FontSize="12"
                                     Glyph="&#xE76C;" />
                             </Grid>
@@ -428,7 +428,7 @@
                                                 Margin="5,0,0,0"
                                                 HorizontalAlignment="Right"
                                                 VerticalAlignment="Center"
-                                                FontFamily="Segoe MDL2 Assets"
+                                                FontFamily="{ThemeResource SymbolThemeFontFamily}"
                                                 FontSize="12"
                                                 Glyph="&#xE76C;" />
                                         </Grid>
