--- a/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Setup/SetupSettingsPage.xaml
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Setup/SetupSettingsPage.xaml
@@ -10,7 +10,9 @@
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     d:Background="{ThemeResource SimpleBlueDarkBrush}"
     NavigationCacheMode="Enabled"
-    mc:Ignorable="d">
+    xmlns:not_win="http://uno.ui/not_win"
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    mc:Ignorable="d not_win">
 
     <ScrollViewer x:Name="Scroller">
         <StackPanel VerticalAlignment="Center" Orientation="Vertical">
@@ -19,7 +21,7 @@
                 Margin="0,32,0,0"
                 HorizontalAlignment="Center"
                 RequestedTheme="Dark">
-                <FontIcon Glyph="&#xF8B0;" />
+                <FontIcon win:Glyph="&#xF8B0;" not_win:Glyph="&#xE713;" not_win:FontSize="96" />
             </Viewbox>
             <TextBlock
                 Padding="8"
@@ -36,7 +38,7 @@
                 CornerRadius="{ThemeResource OverlayCornerRadius}"
                 Orientation="Vertical">
                 <StackPanel.Background>
-                    <SolidColorBrush Opacity="0.85" Color="{ThemeResource RegionColor}" />
+                    <SolidColorBrush Opacity="0.85" not_win:Color="{ThemeResource SurfaceColor}" win:Color="{ThemeResource RegionColor}" />
                 </StackPanel.Background>
                 <TextBlock
                     x:Uid="Pref_SummaryUnits"
@@ -59,7 +61,8 @@
                 <ComboBox
                     x:Name="RefreshComboBox"
                     MinWidth="260"
-                    Margin="0,10">
+                    Margin="0,10"
+                    Style="{ThemeResource DefaultComboBoxStyle}">
                     <ComboBox.Header>
                         <TextBlock d:Text="Update Frequency" Text="{helpers:StringRes Name='pref_title_refreshinterval'}" />
                     </ComboBox.Header>
@@ -69,7 +72,7 @@
                     d:Text="Show notifications for weather alerts:"
                     Text="{helpers:StringRes Name='pref_summary_alerts'}" />
                 <StackPanel Padding="10,5" Orientation="Horizontal">
-                    <ToggleSwitch x:Name="AlertSwitch" />
+                    <ToggleSwitch x:Name="AlertSwitch" Style="{ThemeResource MaterialToggleSwitchStyle}" />
                 </StackPanel>
             </StackPanel>
         </StackPanel>
