setuppages gtk complete

--- a/SimpleWeather.Uno/SimpleWeather.Uno.Shared/App.xaml
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Shared/App.xaml
@@ -4,13 +4,18 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Common.Controls"
     xmlns:converters="using:SimpleWeather.UWP.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:localControls="using:SimpleWeather.UWP.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mtuc="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:muxm="using:Microsoft.UI.Xaml.Media"
+    xmlns:not_win="http://uno.ui/not_win"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:toolkitConverters="using:Microsoft.Toolkit.Uwp.UI.Converters">
+    xmlns:toolkitConverters="using:Microsoft.Toolkit.Uwp.UI.Converters"
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    mc:Ignorable="d not_win">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,17 +23,18 @@
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
 
                 <!--  Load Uno.Material resources  -->
-                <MaterialColors xmlns="using:Uno.Material" OverrideSource="ms-appx:///Themes/MaterialColorsOverride.xaml" />
-                <MaterialFonts xmlns="using:Uno.Material" />
-                <MaterialResources xmlns="using:Uno.Material" />
+                <!--<not_win:MaterialColors xmlns="using:Uno.Material" OverrideSource="ms-appx:///Themes/MaterialColorsOverride.xaml" />
+                <not_win:MaterialFonts xmlns="using:Uno.Material" />
+                <not_win:MaterialResources xmlns="using:Uno.Material" />-->
 
- 				<!-- Load Uno.Toolkit.UI resources -->
- 				<ToolkitResources xmlns="using:Uno.Toolkit.UI" />
- 				<MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />
+                <!--  Load Uno.Toolkit.UI resources  -->
+                <not_win:ToolkitResources xmlns="using:Uno.Toolkit.UI" />
+                <!--<not_win:MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />-->
 
                 <!--  Load custom resources  -->
                 <localControls:DataTemplates />
                 <ResourceDictionary Source="ms-appx:///Themes/Colors.xaml" />
+                <ResourceDictionary Source="ms-appx:///Themes/MaterialColorsOverride.xaml" />
                 <ResourceDictionary Source="ms-appx:///Themes/Generic.xaml" />
                 <ResourceDictionary Source="ms-appx:///Themes/Styles.xaml" />
                 <ResourceDictionary Source="ms-appx:///Themes/Themes.xaml" />
