--- a/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Setup/SetupLocationsPage.xaml
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Setup/SetupLocationsPage.xaml
@@ -2,6 +2,7 @@
     x:Class="SimpleWeather.UWP.Setup.SetupLocationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:android="http://uno.ui/android"
     xmlns:contract6Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,6)"
     xmlns:contract7NotPresent="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,7)"
     xmlns:contract7Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,7)"
@@ -12,14 +13,15 @@
     xmlns:localControls="using:SimpleWeather.UWP.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    xmlns:not_skia="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:not_win="http://uno.ui/not_win"
+    xmlns:skia="http://uno.ui/skia"
     xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:android="http://uno.ui/android"
     d:Background="{ThemeResource SimpleBlueDarkBrush}"
     x:DefaultBindMode="OneWay"
     Background="Transparent"
     NavigationCacheMode="Enabled"
-    mc:Ignorable="d not_win">
+    mc:Ignorable="d android not_win skia">
 
     <Page.Resources>
         <ResourceDictionary Source="ms-appx:///Setup/SetupLocationspage.Resources.xaml" />
@@ -36,39 +38,65 @@
                     x:Name="AppLogo"
                     Height="85"
                     Margin="0,25"
-                    RelativePanel.Above="LocationSearchBox"
+                    RelativePanel.Above="SearchContainer"
                     RelativePanel.AlignHorizontalCenterWithPanel="True">
                     <win:SymbolIcon Foreground="White" Symbol="Map" />
-                    <not_win:FontIcon Foreground="White" FontSize="96" Glyph="&#xE707;" />
+                    <not_win:FontIcon
+                        FontSize="96"
+                        Foreground="White"
+                        Glyph="&#xE707;" />
                 </Viewbox>
-                <localControls:ProgressAutoSuggestBox
-                    x:Name="LocationSearchBox"
-                    win:Background="#F0FFFFFF"
-                    not_win:Background="{ThemeResource AutoSuggestTextBoxBackground}"
-                    Footer="{x:Bind LocationSearchViewModel.Footer, Mode=OneWay}"
-                    IsSuggestionListOpen="{x:Bind LocationSearchViewModel.Locations, Converter={StaticResource collectionBooleanConverter}, Mode=OneWay}"
-                    ItemsSource="{x:Bind LocationSearchViewModel.Locations, Mode=OneWay}"
-                    PlaceholderText="{helpers:StringRes Name='setup_location_prompt'}"
-                    QuerySubmitted="Location_QuerySubmitted"
+                <win:Border
+                    x:Name="SearchContainer"
                     RelativePanel.AlignLeftWithPanel="True"
                     RelativePanel.AlignRightWithPanel="True"
-                    RelativePanel.AlignVerticalCenterWithPanel="True"
-                    Style="{ThemeResource LocationQuerySearchBoxStyle}"
-                    SuggestionChosen="Location_SuggestionChosen"
-                    win:TextBoxStyle="{StaticResource ProgressAutoSuggestBoxTextBoxOverAccentStyle}"
-                    TextChanged="Location_TextChanged"
-                    Tapped="LocationSearchBox_Tapped">
-                </localControls:ProgressAutoSuggestBox>
+                    RelativePanel.AlignVerticalCenterWithPanel="True">
+                    <localControls:ProgressAutoSuggestBox
+                        x:Name="LocationSearchBox"
+                        Background="#F0FFFFFF"
+                        Footer="{x:Bind LocationSearchViewModel.Footer, Mode=OneWay}"
+                        IsSuggestionListOpen="{x:Bind LocationSearchViewModel.Locations, Converter={StaticResource collectionBooleanConverter}, Mode=OneWay}"
+                        ItemsSource="{x:Bind LocationSearchViewModel.Locations, Mode=OneWay}"
+                        PlaceholderText="{helpers:StringRes Name='setup_location_prompt'}"
+                        QuerySubmitted="Location_QuerySubmitted"
+                        Style="{ThemeResource LocationQuerySearchBoxStyle}"
+                        SuggestionChosen="Location_SuggestionChosen"
+                        Tapped="LocationSearchBox_Tapped"
+                        TextBoxStyle="{StaticResource ProgressAutoSuggestBoxTextBoxOverAccentStyle}"
+                        TextChanged="Location_TextChanged" />
+                </win:Border>
+                <not_win:Border
+                    x:Name="SearchContainer"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignRightWithPanel="True"
+                    RelativePanel.AlignVerticalCenterWithPanel="True">
+                    <localControls:ProgressAutoSuggestBox
+                        x:Name="LocationSearchBox"
+                        Background="{ThemeResource AutoSuggestTextBoxBackground}"
+                        Footer="{x:Bind LocationSearchViewModel.Footer, Mode=OneWay}"
+                        IsSuggestionListOpen="{x:Bind LocationSearchViewModel.Locations, Converter={StaticResource collectionBooleanConverter}, Mode=OneWay}"
+                        ItemsSource="{x:Bind LocationSearchViewModel.Locations, Mode=OneWay}"
+                        PlaceholderText="{helpers:StringRes Name='setup_location_prompt'}"
+                        QuerySubmitted="Location_QuerySubmitted"
+                        RelativePanel.AlignLeftWithPanel="True"
+                        RelativePanel.AlignRightWithPanel="True"
+                        RelativePanel.AlignVerticalCenterWithPanel="True"
+                        Style="{ThemeResource LocationQuerySearchBoxStyle}"
+                        SuggestionChosen="Location_SuggestionChosen"
+                        Tapped="LocationSearchBox_Tapped"
+                        TextChanged="Location_TextChanged" />
+                </not_win:Border>
                 <Button
                     Name="GPSButton"
                     Grid.Row="1"
-                    win:Margin="10"
-                    not_win:Margin="0,10"
                     HorizontalAlignment="Center"
+                    not_win:Margin="0,10"
+                    skia:Visibility="Collapsed"
+                    win:Margin="10"
                     Click="GPS_Click"
                     IsEnabled="{x:Bind LocationSearchViewModel.IsLoading, Converter={StaticResource inverseBoolConverter}}"
                     RelativePanel.AlignHorizontalCenterWithPanel="True"
-                    RelativePanel.Below="LocationSearchBox">
+                    RelativePanel.Below="SearchContainer">
                     <win:Button.Resources>
                         <SolidColorBrush x:Key="ButtonBackground" Color="#FFFFFFFF" />
                         <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="#C5FFFFFF" />
@@ -100,27 +128,16 @@
                         </StackPanel>
                     </Button.Content>
                 </Button>
-                <win:Border RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.Below="GPSButton">
-                    <muxc:ProgressRing
-                        Name="LoadingRing"
-                        Width="35"
-                        Height="35"
-                        Margin="10"
-                        HorizontalAlignment="Center"
-                        Foreground="White"
-                        IsActive="{x:Bind LocationSearchViewModel.IsLoading}"
-                        IsIndeterminate="True" />
-                </win:Border>
-                <not_win:ProgressRing
+                <muxc:ProgressRing
                     Name="LoadingRing"
-                    Grid.Row="2"
                     Width="35"
                     Height="35"
                     Margin="10"
                     HorizontalAlignment="Center"
+                    android:Visibility="{x:Bind LocationSearchViewModel.IsLoading}"
                     Foreground="White"
                     IsActive="{x:Bind LocationSearchViewModel.IsLoading}"
-                    android:Visibility="{x:Bind LocationSearchViewModel.IsLoading}"
+                    IsIndeterminate="True"
                     RelativePanel.AlignHorizontalCenterWithPanel="True"
                     RelativePanel.Below="GPSButton" />
             </RelativePanel>
